tests/expectations/compiler/integers/u64/hex_min_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value -0x1 is not a valid `u64`
    --> compiler-test:5:22
     |
   5 |         let a: u64 = -0x1u64;
     |                      ^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
